# how-agents-talk

./: .env.example  .gitignore  README.md  pyproject.toml
a2a/mcp-server/: server.py
a2a/mcp-server/adapters/mock/: deployments.py  logs.py  metrics.py  notifications.py
a2a/mcp-server/ports/: deployments.py  logs.py
a2a/mcp-server/tests/: test_mcp_direct.py
a2a/problem/contracts/: models.py
a2a/problem/mocks/: data.py
a2a/triage-agent/: agent.card.json  agent.py  agent_card.py  agent_executor.py  server.py
a2a/triage-agent/studio/: langgraph.json  triage_graph.py
a2a/triage-agent/tests/: test_triage.py
docs/: DECISIONS.md
mcp-server/: deps.py  server.py
mcp-server/ports/: metrics.py  notifications.py
