[project]
name = "how-agents-talk"
version = "0.1.0"
description = "A2A + MCP multi-agent incident response demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=1.0.2",
    "langchain>=1.2.0",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.2.0",
    "langchain-mcp-adapters>=0.2.0",
    "mcp>=1.27.0",
    "uvicorn>=0.46.0",
    "pydantic>=2.0.0",
]
